update for subdomain addition

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -68,7 +68,7 @@
             </div>
         </div>
     </div>
-    <div class="section-001">
+    <!-- <div class="section-001">
         <div class="container">
             <div class="kaycee-heading style-01">
                 <div class="heading-inner">
@@ -212,15 +212,14 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="container">
       <div class="kaycee-heading style-01">
           <div class="heading-inner">
               <h3 class="title">
                   Testimonials<span></span></h3>
               <div class="subtitle">
-                  Lorem ipsum dolor sit amet consectetur elit erat vehicula ad, mollis viverra
-                  vulputate
+                What Our Customers Are Saying
               </div>
           </div>
       </div>
@@ -236,9 +235,7 @@
                                data-responsive="[{&quot;breakpoint&quot;:480,&quot;settings&quot;:{&quot;slidesToShow&quot;:1,&quot;slidesMargin&quot;:&quot;0&quot;}},{&quot;breakpoint&quot;:768,&quot;settings&quot;:{&quot;slidesToShow&quot;:1,&quot;slidesMargin&quot;:&quot;0&quot;}},{&quot;breakpoint&quot;:992,&quot;settings&quot;:{&quot;slidesToShow&quot;:1,&quot;slidesMargin&quot;:&quot;0&quot;}},{&quot;breakpoint&quot;:1200,&quot;settings&quot;:{&quot;slidesToShow&quot;:1,&quot;slidesMargin&quot;:&quot;0&quot;}},{&quot;breakpoint&quot;:1500,&quot;settings&quot;:{&quot;slidesToShow&quot;:1,&quot;slidesMargin&quot;:&quot;0&quot;}}]">
                               <div class="kaycee-testimonial style-02">
                                   <div class="testimonial-inner">
-                                      <p class="desc">Lorem ipsum dolor sit amet consectetur
-                                          elit,
-                                          facilisi viverra morbi aptent taciti hendrerit pulvinar ante</p>
+                                      <p class="desc">Absolutely love the craftsmanship – my go-to for elegant jewelry!</p>
                                       <div class="testimonial-info">
                                           <div class="intro">
                                               <h3 class="name">
@@ -258,9 +255,7 @@
                               </div>
                               <div class="kaycee-testimonial style-02">
                                   <div class="testimonial-inner">
-                                      <p class="desc">Lorem ipsum dolor sit amet consectetur
-                                          elit,
-                                          facilisi viverra morbi aptent taciti hendrerit pulvinar ante</p>
+                                      <p class="desc">Exceptional designs and top-quality materials. Highly recommend!</p>
                                       <div class="testimonial-info">
                                           <div class="intro">
                                               <h3 class="name">
@@ -280,9 +275,7 @@
                               </div>
                               <div class="kaycee-testimonial style-02">
                                   <div class="testimonial-inner">
-                                      <p class="desc">Lorem ipsum dolor sit amet consectetur
-                                          elit,
-                                          facilisi viverra morbi aptent taciti hendrerit pulvinar ante</p>
+                                      <p class="desc">Stunning pieces, always get compliments. Fantastic customer service!</p>
                                       <div class="testimonial-info">
                                           <div class="intro">
                                               <h3 class="name">
