--- a/views/index.ejs
+++ b/views/index.ejs
@@ -446,7 +446,7 @@
                 
                  <% posts.map(post=>{ %>
                  <div class="rows-space-0">
-                    <a target="_blank" href="<%= post.link %>" class="item"
+                    <a target="_blank" href="#" class="item"
                        tabindex="0">
                         <img class="img-responsive lazy" src="<%= post.image %>" >
                         <span class="instagram-info">
