privacy policy added

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -34,34 +34,9 @@
               <div class="col-md-4" style="text-align: center;">
                 <p>Developed By <a href="#">Amardeep Singh</a></p>
             </div>
-              <div class="col-md-4">
-                  <div class="kaycee-socials style-01">
-                      <div class="content-socials">
-                          <ul class="socials-list">
-                              <li>
-                                  <a href="https://facebook.com/" target="_blank">
-                                      <i class="fa fa-facebook"></i>
-                                  </a>
-                              </li>
-                              <li>
-                                  <a href="https://www.instagram.com/" target="_blank">
-                                      <i class="fa fa-instagram"></i>
-                                  </a>
-                              </li>
-                              <li>
-                                  <a href="https://twitter.com/" target="_blank">
-                                      <i class="fa fa-twitter"></i>
-                                  </a>
-                              </li>
-                              <li>
-                                  <a href="https://www.pinterest.com/" target="_blank">
-                                      <i class="fa fa-pinterest-p"></i>
-                                  </a>
-                              </li>
-                          </ul>
-                      </div>
-                  </div>
-              </div>
+            <div class="col-md-4" style="text-align: center;">
+                <p> <a href="/assets/Terms.pdf">Privacy Policy</a></p>
+            </div>
           </div>
       </div>
   </div>
