--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -32,7 +32,7 @@
                   <p style="white-space: nowrap;">© Copyright <span id="footer-year"></span> <a href="/">MyssticbyArzoo</a>. All Rights Reserved.</p>
               </div>
               <div class="col-md-4" style="text-align: center;">
-                <p>Developed By <a href="#">Amardeep Singh</a></p>
+                <p>Developed By <a href="https://amartist.tech/">Amardeep Singh</a></p>
             </div>
             <div class="col-md-4" style="text-align: center;">
                 <p> <a href="/assets/Terms.pdf">Privacy Policy</a></p>
