--- a/views/index.ejs
+++ b/views/index.ejs
@@ -155,8 +155,8 @@
                             <div class="product-thumb">
                                 <a class="thumb-link" href="/product/<%= item._id %>">
                                     <img class="img-responsive"
-                                         src="/assets/images/apro1211-2-600x778.jpg"
-                                         alt="Gold Bracelet" width="600" height="778">
+                                         src="<%= item.images[0] %>" style="width: 255px; height: 255px;"
+                                         alt="Gold Bracelet" >
                                 </a>
                                 <!-- <div class="flash">
                                     <span class="onsale"><span class="number">-14%</span></span>
@@ -371,10 +371,10 @@
             </div>
         </div>
     </div>
-  <div class="section-014" style="margin-top: 32px;">
-        <div class="container">
+  <div class="section-014" style="margin-top: 32px;" style="width: 100vw !important;">
+        <div class="container" style="width: auto;">
             <div class="row">
-                <div class="col-md-6 col-lg-3">
+                <div class="col-md-6 col-lg-4">
                     <div class="kaycee-iconbox style-02">
                         <div class="iconbox-inner">
                             <div class="icon">
@@ -388,7 +388,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-3">
+                <div class="col-md-6 col-lg-4">
                     <div class="kaycee-iconbox style-02">
                         <div class="iconbox-inner">
                             <div class="icon">
@@ -401,20 +401,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-3">
-                    <div class="kaycee-iconbox style-02">
-                        <div class="iconbox-inner">
-                            <div class="icon">
-                                <span class="flaticon-return-1"></span>
-                            </div>
-                            <div class="content">
-                                <h4 class="title">365 Days Return</h4>
-                                <div class="desc">Round-the-clock assistance for a smooth shopping experience.</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3">
+              
+                <div class="col-md-6 col-lg-4">
                     <div class="kaycee-iconbox style-02">
                         <div class="iconbox-inner">
                             <div class="icon">
