--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -186,9 +186,9 @@
                             <div class="product-inner tooltip-left">
                                 <div class="product-thumb">
                                     <a class="thumb-link" href="/product/<%= item._id %>">
-                                        <img class="img-responsive"
-                                             src="/assets/images/apro1211-2-600x778.jpg"
-                                             alt="Gold Bracelet" width="600" height="778">
+                                        <img class="img-responsive" style="width: 255px; height: 255px;"
+                                             src="<%= item.images[0] %>"
+                                             alt="Gold Bracelet" width="600" height="600">
                                     </a>
                                      <div class="flash">
                                        <!-- <span class="onsale"><span class="number">-14%</span></span>-->
