logo spread fixed

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -241,7 +241,7 @@
       </div>
   </div>
   <div class="header-mobile">
-      <div class="header-mobile-left">
+      <div class="header-mobile-left" style="width: 20% !important;">
           <div class="block-menu-bar">
               <a class="menu-bar menu-toggle" href="#">
                   <span></span>
@@ -252,15 +252,15 @@
           
          
       </div>
-      <div class="header-mobile-mid">
+      <div class="header-mobile-mid" style="width: 50% !important; padding-right: 16px;">
           <div class="header-logo">
               <a href="/">
-                <img alt="Kaycee" src="/assets/logo/logo.png" class="logo" style="height: 60px;">
+                <img alt="Kaycee" src="/assets/logo/logo.png" class="logo" style="height: 60px; max-width: fit-content;">
               
               </a>
           </div>
       </div>
-      <div class="header-mobile-right">
+      <div class="header-mobile-right" style="width: 30% !important;">
           <div class="header-control-inner">
               <div class="meta-dreaming">
                   <div class="menu-item block-user block-dreaming kaycee-dropdown">
