Shop category images changed,
Product page images changed

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -196,14 +196,14 @@
                                 </div>
                                 <div class="container-cell">
                                     <div class="az_single_image-wrapper az_box_border_grey">
-                                        <img src="/assets/images/single-pro1.jpg"
+                                        <img src="https://i.ibb.co/cKHbR316/Whats-App-Image-2025-05-01-at-19-14-56-339d7ddc.jpg"
                                              class="az_single_image-img attachment-full" alt="img"></div>
                                 </div>
                             </div>
                             <div class="container-table">
                                 <div class="container-cell">
                                     <div class="az_single_image-wrapper az_box_border_grey">
-                                        <img src="/assets/images/single-pro2.jpg"
+                                        <img src="https://i.ibb.co/1tpZCg9W/Whats-App-Image-2025-05-01-at-19-14-15-04654d66.jpg"
                                             class="az_single_image-img attachment-full" alt="img"></div>
                                 </div>
                                 <div class="container-cell">
