--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -44,7 +44,7 @@
                     <div class="categories-inner">
                         <figure class="categories-thumb">
                             <a href="/shop/rings" tabindex="-1">
-                                <img src="/assets/images/cat1.png"
+                                <img src="https://i.ibb.co/cXpQLS3q/IMG-0521.jpg" style="border-radius: 50%; height:135px !important; width:135px;"
                                      class="img-responsive attachment-370x370 size-370x370" alt="img"> </a>
                         </figure>
                         <h3 class="title">
@@ -57,7 +57,7 @@
                     <div class="categories-inner">
                         <figure class="categories-thumb">
                             <a href="/shop/bracelets" tabindex="-1">
-                                <img src="/assets/images/cat2.png"
+                                <img src="https://i.ibb.co/7tpLXSY3/IMG-1042.jpg" style="border-radius: 50%; height:135px !important; width:135px;"
                                      class="img-responsive attachment-370x370 size-370x370" alt="img"> </a>
                         </figure>
                         <h3 class="title">
@@ -69,7 +69,7 @@
                     <div class="categories-inner">
                         <figure class="categories-thumb">
                             <a href="/shop/necklaces" tabindex="0">
-                                <img src="/assets/images/cat3.png"
+                                <img src="https://i.ibb.co/DDmZhMg1/IMG-7010.jpg" style="border-radius: 50%; height:135px !important; width:135px;"
                                      class="img-responsive attachment-370x370 size-370x370" alt="img"> </a>
                         </figure>
                         <h3 class="title">
@@ -82,7 +82,7 @@
                     <div class="categories-inner">
                         <figure class="categories-thumb">
                             <a href="/shop/crystals" tabindex="0">
-                                <img src="/assets/images/cat4.png"
+                                <img src="https://i.ibb.co/XnH58Dr/IMG-7082.jpg" style="border-radius: 50%; height:135px !important; width:135px;"
                                      class="img-responsive attachment-370x370 size-370x370" alt="img"> </a>
                         </figure>
                         <h3 class="title">
@@ -95,7 +95,7 @@
                     <div class="categories-inner">
                         <figure class="categories-thumb">
                             <a href="/shop/apothecary" tabindex="0">
-                                <img src="/assets/images/cat5.png"
+                                <img src="https://i.ibb.co/B5kGsXRb/IMG-7085.jpg" style="border-radius: 50%; height:135px !important; width:135px;"
                                      class="img-responsive attachment-370x370 size-370x370" alt="img"> </a>
                         </figure>
                         <h3 class="title">
@@ -108,7 +108,7 @@
                     <div class="categories-inner">
                         <figure class="categories-thumb">
                             <a href="/shop/clusters" tabindex="0">
-                                <img src="/assets/images/cat6.png"
+                                <img src="https://i.ibb.co/qLHsQq0T/IMG-7083.jpg" style="border-radius: 50%; height:135px !important; width:135px;"
                                      class="img-responsive attachment-370x370 size-370x370" alt="img"> </a>
                         </figure>
                         <h3 class="title">
